--- a/semiconductor physics/化学键与晶体结构.md
+++ b/semiconductor physics/化学键与晶体结构.md
@@ -21,10 +21,22 @@
    1. 离子键和离子晶体
       1. def：依靠正负离子间的静电引力所形成的结合力，由离子键键合而成的晶体被称为离子晶体
       2. IA族元素易失去电子，VIIB族元素易得电子
-      3. exp：Nacl---Na的最外层电子完全转移到Cl的最外层轨道上，两者形成了类似惰性气体的8电子的最外层壳层稳定结构
-   2. 任一离子的最近邻必定是带相反电荷的另一种原子，这是静电引力作用的结果
-   3. 配位数：晶体中任一原子或离子周围最近邻的原子或离子数
-      1. Nacl的配位数为6，配位数反应了晶体中原子或离子的排列紧密程度
-   4. 晶胞：晶体结果的基本单元，既反映了周期性，又反映了各种对称性
-   5. 离子晶体一般是绝缘体v
+          exp：Nacl---Na的最外层电子完全转移到Cl的最外层轨道上，两者形成了类似惰性气体的8电子的最外层壳层稳定结构
+      3. 任一离子的最近邻必定是带相反电荷的另一种原子，这是静电引力作用的结果
+      4. 配位数：晶体中任一原子或离子周围最近邻的原子或离子数
+      5. Nacl的配位数为6，配位数反应了晶体中原子或离子的排列紧密程度
+      6. 晶胞：晶体结果的基本单元，既反映了周期性，又反映了各种对称性
+      7. 离子晶体一般是绝缘体v
 
+   2. 共价键与共价晶体
+      1. C，Si，Ge等晶体由同一种原子组成，故不存在负电性差，不存在价电子在原子之间的转移，而是由两个原子之间依靠一对自旋相反，配对的价电子，它们的电子云相互重叠故有较高的密度。带正电的原子实依靠两个原子之间带负电的原子实所形成的结合力，将原子结合成晶体，这样的结合力就是共价键。由共价键结合而成的晶体就是共价晶体。
+
+      2. 共价键的特点
+         1. 饱和性：一个原子与周围原子之间形成的共价键的数目是有限的
+         2. 方向性：原子之间形成共价键时，电子云的相互重叠在空间的一定方向（共价键的方向）上具有最高密度
+         3. C，Si，Ge的配位数是4
+
+   3. 金属键与金属晶体
+      1. I，II，III族元素具有较低的负电性，对价电子的束缚能力比较弱，在结合成晶体的时候，原本分别属于各个原子的价电子就不再属于某个特定的原子，而是为所有原子所共有，可以在晶体中做自由运动，电子的波函数遍及整个晶体，称为电子气。带负电的电子气和带正电的原子实之间的库伦引力形成的结合力称为金属键。
+      2. 在金属晶体中，要求原子的排列尽可能的紧密，这样才是最稳定的结构。
+      3. 金属晶体中具有最高的配位数
