--- a/linux_learning/进阶.md
+++ b/linux_learning/进阶.md
@@ -2,3 +2,17 @@
   - \* 匹配任意多个符号
   - ? 匹配一个符号
   - \[ ] 限定匹配的范围
+
+- mount : 将分区挂载到目录
+  - `mount /dev/sdc/ /mnt` 将设备挂载到/mnt目录下
+  - `umount /mnt` 卸载上一步的挂载
+
+- df : 显示磁盘相关的信息
+- du : 查看文件占用的空间
+- sort : 对文本文件进行排序
+  - `sort file` 按字符排序
+  - `sort -n file` 按数字大小进行排序
+- grep : 正则搜索
+- gzip : 压缩和解压缩
+  - `tar -zcvf log.tar.gz log.log`
+  - `tar -zxvf log.tar.gz` 
