--- a/signal&system/P2连续时间系统的时域分析.md
+++ b/signal&system/P2连续时间系统的时域分析.md
@@ -1,1 +1,26 @@
-# 
+# 连续时间系统的时域分析
+
+现考虑线性微分系统
+$$ \begin{align*}
+ &\frac{d^Ny}{dt^N} + a_1 \frac{d^{N-1}y}{dt^{N-1}} + \cdots + a_{N-1} \frac{dy}{dt} + a_N y(t) \\&= b_{N-M} \frac{d^{M}x}{dt^{M}} + b_{N-M+1} \frac{d^{M-1}x}{dt^{M-1}} + b_{N-1} \frac{dx}{dt} + b_N x(t) 
+\end{align*} $$
+
+用运算符$\mathrm{D}$来表示$\frac{d}{dt}$，上式可以表示为
+$$ \begin{align*}
+    &(D^N + a_1D_{N-1} + \cdots + a_{N-1}D + a_N) y(t) \\ &=(b_{N-M} D^M + b_{N-M+1}D^{M-1} + \cdots + b_{N-1}D + b_N)x(t)
+\end{align*} $$
+
+其中，多项式$Q(D)$ 和$P(D)$ 分别为：
+$$ \begin{align}
+    &Q(D) = D^N + a_1D_{N-1} + \cdots + a_{N-1}D + a_N  \\ &P(D)=b_{N-M} D^M + b_{N-M+1}D^{M-1} + \cdots + b_{N-1}D + b_N
+\end{align} $$
+
+理论上，上式中的幂次$M$和$N$可以取任何值。然而，从实际考虑有两点原因使得$M > N$ 是不希望出现的。:star:
+
+## 系统对内部条件的响应：零输入响应
+
+零输入响应$y_0(t)$ 是当输入$x(t) = 0$的解，可以通过数学方法获得通解（若忘了见书P118）
+
+**实际初始条件和$0^-$与$0^+$的意义**
+>如果没有特殊的说明，都假设输入是从$t=0$开始的。在实际中，很可能知道的是$t=0^-$时的初始条件，而不是$t=0^+$时的初始条件。
+>完全响应$y(t)$由两部分构成。在$t=0^-$时，完全响应$y(t)$由零输入分量$y_0(t)$单独构成，因为此时还没有施加输入，所以此时$y(t)$的初始条件与$y_0(t)$的初始条件完全相同，即$y(0^-) = y_0(0^-), \overset{.}{y}(0^-) = \overset{.}{y_0}(0^-)$。再者，$y_0(t)$是仅有初始条件产生的响应，而不依赖于$x(t)$，所以输入在$t=0$时的加入完全不影响$y_0(t)$。很明显，对于$y_0(t)$，$t=0,t=0^-,t=0^+$时的初始条件没有区别。但对于包括零输入分量和零状态分量的而安全响应$y(t)$，情况就并非如此了。
