--- a/EM/Electromagnetic fields/场论相关数学知识.md
+++ b/EM/Electromagnetic fields/场论相关数学知识.md
@@ -1,7 +1,11 @@
 # 场论相关的数学知识
 
 ## 正交曲线坐标系
-
+**拉梅系数的引入**：不同坐标系下的度量系数
+1. 以直角坐标系为例：
+   $\vec{r} = x \hat{i_x} + y \hat{i_y} + z \hat{i_z}$
+    $h_1 = h_x = \lim_{x \to 0} \frac{ \vec{r}(x+\Delta x) - \vec{r}(x)}{x} = 1$
+    
 :star:常见的正交坐标系有直角坐标系，柱坐标系，球面坐标系
 在直角坐标系中
 $$ \begin{cases}
@@ -245,9 +249,63 @@ $$ \begin{align*}
 \end{align*} $$
 $\boldsymbol{i_1}\frac{\partial f}{h_1\partial u_1} + \boldsymbol{i_2}\frac{\partial f}{h_2\partial u_2} + \boldsymbol{i_3}\frac{\partial f}{h_3\partial u_3}$ 即为梯度，由此可见，所谓方向导数，就是梯度在$d\boldsymbol{s}$方向上的投影
 
+**利用梯度来推导不同坐标系下单位矢量的关系**
+$$ \begin{align*}
+    \begin{cases}
+        x = r \sin \theta \cos \varphi \\
+        y = r \sin \theta \sin \varphi \\
+        z = r \cos \theta
+    \end{cases}
+\end{align*} $$ 
+
+对等式两边分别求梯度
+$$ \begin{align*}
+    \begin{cases}
+        \hat{i_x} = \hat{i_{rs}} \sin \theta \cos \varphi + \hat{i_{\theta}} \cos \theta \cos \varphi + \hat{i_\varphi}*-\sin \varphi \\
+        \hat{i_y} = \hat{i_{rs}} \sin \theta \sin \varphi + \hat{i_{\theta}} \cos \theta \sin \varphi + \hat{i_\varphi} \cos \varphi \\
+        \hat{i_z} = \hat{i_{rs}} \cos \theta + \hat{i_\theta}*-\sin \theta 
+    \end{cases}
+\end{align*} $$
 **梯度的一些性质**
 1. 一个标量场的梯度构成一个矢量场
 2. 在空间任意一点，标量场梯度的方向总是与过这点的等值面垂直的
 3. 在空间任一点，标量场梯度的模值都等于标量场在该点方向导数可能取得的最大值
 4. 空间任意一点，标量场梯度的方向都是指向标量场场量增加的方向
 5. 一个单值标量场梯度的线积分$\int_c \nabla f \cdot d\boldsymbol{s}$仅与曲线的起止点有关
+
+
+## 矢量场的散度
+
+矢量的表示$\boldsymbol{A} = \boldsymbol{A}(\boldsymbol{r},t) = \boldsymbol{i_1}A_1(\boldsymbol{r},t)+\boldsymbol{i_2}A_2(\boldsymbol{r},t) +  \boldsymbol{i_3}A_2(\boldsymbol{r},t)$
+矢量场场线的定义：一条曲线在空间各点都与场矢量相切。场线越密集，场量的模越大
+![](../../note_picture/Electromagnetics_field_learning_p1_3.png)
+矢量场A通过曲面通量：$\int_{s}\boldsymbol{A}d\boldsymbol{a}$
+
+散度的数学定义：包围矢量场$\boldsymbol{A}$中一点的闭合曲面$S$，该曲面围成的面积是$\Delta v$，散度表示当$\Delta v$趋于0时，矢量场穿入穿出S的净通量与$\Delta v$的比值，数学公式表示为：$$ \mathrm{div}\boldsymbol{A}(p) = \nabla  \cdot \boldsymbol{A} = \lim_{\Delta v \to 0} \frac{\oint_{s}\boldsymbol{A}d\boldsymbol{a}}{\Delta v}$$
+
+散度的性质
+1. 一个矢量场的散度在空间构成一个标量场
+2. 如果在空间一点有矢量场的净通量发出，散度为正；净通量汇入，散度为负
+3. $\nabla \cdot (\boldsymbol{A} + \boldsymbol{B}) = \nabla \cdot \boldsymbol{A} + \nabla \cdot \boldsymbol{B}$
+4. $\nabla \cdot (f\boldsymbol{A}) = \boldsymbol{A} \cdot \nabla f + f\nabla \cdot \boldsymbol{A}$
+
+在正交曲线坐标系下散度的推导
+:sweat_smile:还没搞懂
+:sweat_smile: 搞懂了搞懂了
+
+直接给出结论
+$$ \nabla \cdot \boldsymbol{A} = \frac{1}{h_1h_2h_3}[\frac{\partial(h_2h_3A_1)}{\partial u_1} + \frac{\partial(h_3h_1A_2)}{\partial u_2} + \frac{\partial(h_1h_2A_3)}{\partial u_3}] $$
+
+**拉普拉斯运算符**
+
+由于一个标量场的梯度在空间构成一个矢量场，而对于矢量场，只要是良态（对空间坐标可导可微）的，即可以计算它的散度。因此，对于一个二次可到的标量场，可以进行以下运算，求梯散度
+$$ \begin{align*}
+    \mathrm{div}(\mathrm{grad} f) = \nabla \cdot (\nabla f) &= \nabla^2f  \\
+    &= \frac{1}{h_1h_2h_3}[\frac{\partial}{\partial u_1}(h_2h_3\frac{\partial f}{h_1 \partial u_1}) + \frac{\partial}{\partial u_2}(h_3h_1 \frac{\partial f}{h_2 \partial u_2}) + \frac{\partial}{\partial u_3}(h_1h_2 \frac{\partial f}{h_3 \partial u_3})]
+\end{align*} $$
+
+                               
+## 矢量场的旋度
+
+保守场：场矢量的积分值与起止点有关，而与路径形状无关
+非保守场：场矢量的积分值与路径有关
