更新到等离子中的波

--- a/EM/Electromagnetic fields/介质中的波.md
+++ b/EM/Electromagnetic fields/介质中的波.md
@@ -3,3 +3,50 @@
 ## 导电介质中的波
 
 导电介质
+$$ \begin{align}
+        \nabla \times \vec{E} &= -\mu \frac{\partial}{\partial t} \vec{H} \\
+        \nabla \times \vec{H} &= \varepsilon \frac{\partial}{\partial t} \vec{E} + \sigma \vec{E}
+\end{align}$$
+
+为了导出电场的波动方程，对式子（1）再次求旋度
+
+$$ \begin{aligned}
+        \nabla \times \nabla \times \vec{E} = -\mu \frac{\partial}{\partial t} \nabla \times \vec{H}
+\end{aligned}$$
+
+整理可得
+
+$$ \begin{align}
+        \nabla^2 \vec{E} - \varepsilon \mu \frac{\partial^2}{\partial t^2} \vec{E} - \sigma \mu \frac{\partial}{\partial t} \vec{E} = 0
+\end{align}$$
+
+一个可能的解为$\vec{E}(\vec{r},t) = \hat{x} E_0 e^{-K_1 z}\cos{(K_R z - \omega t)}$
+
+![](../../note_picture/EM_Field_介质中的波_P1.png)
+代回到式子（3）中可以求得$K_1$,$K_R$
+
+$$ \begin{aligned}
+        K_R &=\omega \sqrt{\mu \varepsilon} [\frac{1}{2}(\sqrt{1+\frac{\sigma^2}{\varepsilon^2 \omega^2} } +1)]^\frac{1}{2} \\
+        K_1 &=\omega \sqrt{\mu \varepsilon} [\frac{1}{2}(\sqrt{1+\frac{\sigma^2}{\varepsilon^2 \omega^2}}-1)]^\frac{1}{2}
+\end{aligned}$$
+
+---
+
+**已知电场求磁场**：利用**旋度公式**
+
+$$ \begin{align}
+        (\frac{\partial E_z}{\partial y} - \frac{\partial E_y}{\partial z})\hat{x} + (\frac{\partial E_x}{\partial z} - \frac{\partial E_z}{\partial x})\hat{y} + (\frac{\partial E_y}{\partial x} - \frac{\partial E_x}{\partial y}) \hat{z} = -\mu \frac{\partial}{\partial t} \vec{H}
+\end{align}$$
+
+由于电场只有$E_x$分量，最后可得$\frac{\partial E_x}{\partial z} = -\mu \frac{\partial}{\partial t} H_y$
+
+$$ \begin{align}
+        H_y = \hat{y} \frac{E_0 e^{-K_1 z}}{\omega \mu} \left [ -K_1 \sin(K_R z - \omega t) + K_R\cos(K_R z - \omega t) \right]
+\end{align}$$
+
+---
+
+定义穿透深度为$d_p = \frac{1}{K_1}$
+
+高电导率的情况下$d_p = \sqrt{\frac{2}{\omega \sigma \varepsilon}}$
+低导电率的情况下$d_p = \frac{2}{\sigma} \sqrt{\frac{\varepsilon}{\mu}}$，这是一个与频率无关的数
