更新到等离子体中的波

--- a/EM/Electromagnetic fields/介质中的波.md
+++ b/EM/Electromagnetic fields/介质中的波.md
@@ -50,3 +50,71 @@ $$ \begin{align}
 
 高电导率的情况下$d_p = \sqrt{\frac{2}{\omega \sigma \varepsilon}}$
 低导电率的情况下$d_p = \frac{2}{\sigma} \sqrt{\frac{\varepsilon}{\mu}}$，这是一个与频率无关的数
+
+---
+
+## 等离子中的波
+
+等离子体中的体电流密度$J_p$
+$$ \begin{align}
+        J_p = Nqv
+\end{align}$$
+N为电荷的体密度
+
+利用mawxell方程组可以得到
+$$ \begin{align}
+        (\nabla^2 - \mu_0\varepsilon_0 \frac{\partial^2}{\partial t^2}- \frac{\mu_0 N q^2}{mu})\vec{E} = 0
+\end{align}$$
+
+将一个可能的解带入
+$$ \begin{align}
+        \vec{E}(z,t) = \hat{x} E_0 e^{-K_I z}\cos (K_R z - \omega t)
+\end{align}$$
+
+得到等离子体中的色散关系
+$$ \begin{align}
+        \begin{cases}
+                 K_R^2 - K_I^2 &= \omega^2 \mu_0 \varepsilon_0(1-\frac{\omega_p^2}{\operatorname{\omega^2}})    \\
+                        2K_RK_I &=0
+        \end{cases}
+\end{align} $$
+$\omega_p$为等离子频率，$\omega_p = \sqrt{\frac{Nq^2}{m\varepsilon_0}}$
+当$\omega \gt \omega_p$时
+
+$$ \begin{align}
+        \begin{cases}
+                K_R^2 = \omega^2 \mu_0 \varepsilon_0 (1-\frac{\omega_p^2}{\omega^2}) \\
+                K_I = 0
+        \end{cases}
+\end{align}$$
+
+当$\omega \lt \omega_p$
+$$ \begin{align}
+        \begin{cases}
+                K_R = 0 \\
+                K_I^2 = \omega^2 \mu_0 \varepsilon_0 (1-\frac{\omega_p^2}{\omega^2}) 
+        \end{cases}
+\end{align}$$
+
+这是一个凋落波，电磁波沿传播方向指数衰减，且不传播时间平均的波
+
+---
+在色散介质中，k时$\omega$的非线性函数，色散关系就是空间频率k与时间频率$\omega$的关系
+在等离子体中
+$$ K_R(\omega) = \frac{1}{c} \sqrt{\omega^2 - \omega_p^2} $$
+
+现考虑两个空间频率非常相近的波，$\omega_1 = \omega_0 + \delta \omega$, $\omega_2 = \omega_0 - \delta \omega$，其空间频率有$K_{R1} = K_{R0} + \delta K_R$, $K_{R2} = K_{R0} - \delta K_R$
+合成后的电场为
+$$ \begin{align}
+        E(z,t) = 2\cos (K_{R0} z - \omega_0 t) \cos(\delta K_R z - \delta \omega t)
+\end{align}$$
+
+前一个余弦函数可以确定相速度（等相面移动的速度）
+$$ \begin{align}
+        v_p = \frac{\omega}{K_R}
+\end{align}$$
+
+后一个余弦函数可以确定群速度，即包络移动的速度，后一个余弦函数达到了频率调制的作用。
+$$ \begin{align}
+        v_g = \frac{\delta \omega}{\delta K_R}
+\end{align}$$
